--- a/POKEDEX/assets/CSS/global.css
+++ b/POKEDEX/assets/CSS/global.css
@@ -1,41 +1,25 @@
-*{
+* {
     font-family: 'Roboto', sans-serif;
     box-sizing: border-box;
 }
 
+body {
+    background-color: #f6f8fc;
+}
+
 .content {
+    width: 100vw;
+    height: 100vh;
     padding: 1rem;
+    background-color: #fff;
 }
 
-.content h1 {
-    margin: 0;
+@media screen and (min-width: 992px) {
+    .content {
+        max-width: 992px;
+        height: auto;
+        margin: 1rem auto;
+        border-radius: 1rem;
+    }
 }
 
-.pokemons {
-    padding: 0% ;
-    margin: 0;
-    list-style: none;
-    display: grid;
-    grid-template-columns: 1fr 1fr;
-}
-
-
-ol.pokemons li {
-    margin: .5rem;
-    padding: 2rem 1rem;
-    background-color: #14A06F;
-    color: aliceblue;
-    border-radius:1rem ;
-    height: 100px;
-    display: flex;
-    
-    max-width: 100%;
-    height: 120px;
-    border-style: none;
-
-}
-
-ol .pokemons li image {
-    max-width: 100%;
-    height: 100px;
-}
