--- a/POKEDEX/assets/CSS/pokedex.css
+++ b/POKEDEX/assets/CSS/pokedex.css
@@ -78,7 +78,7 @@
     background-color: #f9aec7;
 }
 
-.pokemons {
+.pokemon {
     display: flex;
     flex-direction: column;
     margin: .5rem;
@@ -86,36 +86,33 @@
     border-radius: 1rem;
 }
 
-.pokemons .number {
+.pokemon .number {
     color: #000;
     opacity: .3;
     text-align: right;
     font-size: .625rem;
 }
 
-.pokemons .name {
+.pokemon .name {
     text-transform: capitalize;
     color: #fff;
     margin-bottom: .25rem;
 }
 
-.pokemons .detail {
+.pokemon .detail {
     display: flex;
     flex-direction: row;
     align-items: center;
     justify-content: space-between;
-    color: #51ff00;
-    background-color: #678fee;
 }
 
-.pokemons .detail .types {
+.pokemon .detail .types {
     padding: 0;
     margin: 0;
     list-style: none;
-    
 }
 
-.pokemons .detail .types .type {
+.pokemon .detail .types .type {
     color: #fff;
     padding: .25rem .5rem;
     margin: .25rem 0;
@@ -123,10 +120,9 @@
     border-radius: 1rem;
     filter: brightness(1.1);
     text-align: center;
-    
 }
 
-.pokemons .detail img {
+.pokemon .detail img {
     max-width: 100%;
     height: 70px;
 }
